--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "nodemon": "^1.11.0",
     "protractor": "~5.1.0",
     "webdriver-manager": "10.2.5",
-    "typescript": "^2.3.4"
+	"typescript": "^2.3.4",
+	"excalibur": "next"
   }
 }
