--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "concurrently --kill-others \"npm run _server:run\" \"ng serve --aot --progress=false --proxy-config proxy.conf.json\"",
+    "start:host:scott": "concurrently --kill-others \"npm run _server:run\" \"ng serve --host 192.168.0.85 --aot --progress=false --proxy-config proxy.conf.json\"",
     "lint:client": "ng lint",
     "lint:server": "tslint './server/**/*.ts' -c ./server/tslint.json --fix",
     "test:client": "ng test",
@@ -60,7 +61,9 @@
     "zone.js": "^0.8.14",
 
     "socket.io": "~2.0.3",
-    "@types/socket.io": "~1.4.29"
+    "@types/socket.io": "~1.4.29",
+    "lodash": "^4.17.4",
+    "@types/lodash": "^4.14.74"
   },
   "devDependencies": {
     "codelyzer": "~3.1.2",
